syntax = "proto3";
import "commontype/QoS.proto";
import "commontype/ClientInfo.proto";
import "commontype/UserProperties.proto";

package commontype;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.type";
option java_outer_classname = "TopicMessageProtos";

message Message{
  uint64 messageId = 1;
  QoS pubQoS = 2;
  bytes payload = 3; // user payload
  uint64 timestamp = 4; // HLC when message received
  bool isRetained = 5; // if the message is generated by matching retain message
  bool isRetain = 6; // for mqtt5, if message is published with retain flag set
  bool isUTF8String = 7; // for mqtt5, corresponds to payload format indicator
  optional string contentType = 8; // for mqtt5
  optional string responseTopic = 9; // for mqtt5
  optional bytes  correlationData = 10; // for mqtt5
  optional uint32 expiryInterval = 11; // for mqtt5
  UserProperties userProperties = 12; // for mqtt5
}

message TopicMessage {
  string topic = 1;
  Message message = 2;
  ClientInfo publisher = 3;
}

message TopicMessagePack {
  message PublisherPack{
    ClientInfo publisher = 1;
    repeated Message message = 2;
  }
  string topic = 1;
  repeated PublisherPack message = 2;
}


message PublisherMessagePack {
  message TopicPack {
    string topic = 1;
    repeated Message message = 2;
  }
  ClientInfo publisher = 1;
  repeated TopicPack messagePack = 2;
}
